<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_views">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:layout_marginVertical="10sp"
            android:layout_marginHorizontal="20sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categorias"
                style="@style/title_bold"
                android:layout_marginBottom="15sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15sp"
                android:layout_marginBottom="20sp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10sp"
                    android:elevation="0dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:id="@+id/linearhome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingVertical="15sp"
                        android:paddingHorizontal="45sp"
                        android:background="@drawable/card_inactiva"
                        >
                        <ImageView
                            android:id="@+id/imagenhome"
                            android:layout_width="75sp"
                            android:layout_height="50sp"
                            android:src="@drawable/home_gris"
                            android:layout_marginBottom="7sp"
                            />
                        <TextView
                            android:id="@+id/texthome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home"
                            style="@style/title_icon_gris"
                            android:ellipsize="end"
                            android:maxLines="1"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_medicina"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10sp"
                    android:elevation="0dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:id="@+id/linearmedicina"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingVertical="15sp"
                        android:paddingHorizontal="45sp"
                        android:background="@drawable/card_inactiva"
                        >
                        <ImageView
                            android:id="@+id/imagemedicina"
                            android:layout_width="75sp"
                            android:layout_height="50sp"
                            android:src="@drawable/medicina_gris"
                            android:layout_marginBottom="7sp"
                            />
                        <TextView
                            android:id="@+id/textmedicina"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medicina"
                            style="@style/title_icon_gris"
                            android:ellipsize="end"
                            android:maxLines="1"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_deporte"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10sp"
                    android:elevation="0dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:id="@+id/lineardeporte"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingVertical="15sp"
                        android:paddingHorizontal="45sp"
                        android:background="@drawable/card_inactiva"
                        >
                        <ImageView
                            android:id="@+id/imagedeporte"
                            android:layout_width="75sp"
                            android:layout_height="50sp"
                            android:src="@drawable/deporte_gris"
                            android:layout_marginBottom="7sp"
                            />
                        <TextView
                            android:id="@+id/textdeporte"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deporte"
                            style="@style/title_icon_gris"
                            android:ellipsize="end"
                            android:maxLines="1"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_tecnologia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10sp"
                    android:elevation="0dp"
                    app:cardUseCompatPadding="true"
                    >
                    <LinearLayout
                        android:id="@+id/lineartec"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingVertical="15sp"
                        android:paddingHorizontal="45sp"
                        android:background="@drawable/card_inactiva"
                        >
                        <ImageView
                            android:id="@+id/imagetecn"
                            android:layout_width="75sp"
                            android:layout_height="50sp"
                            android:src="@drawable/tecnologia_gris"
                            android:layout_marginBottom="7sp"
                            />
                        <TextView
                            android:id="@+id/texttecno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tecnologia"
                            style="@style/title_icon_gris"
                            android:ellipsize="end"
                            android:maxLines="1"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noticias"
                style="@style/subtitle_bold"
                android:layout_marginBottom="15sp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>